<resources>
    <string name="app_name">issue-tracker</string>

    <!--login label-->
    <string name="label_github">깃헙 계정으로 로그인</string>
    <string name="label_google">구글 계정으로 로그인</string>

    <!--bottom navigation-->
    <string name="bottom_navigation_issue">이슈</string>
    <string name="bottom_navigation_label">레이블</string>
    <string name="bottom_navigation_milestone">마일스톤</string>
    <string name="bottom_navigation_my_page">내 계정</string>

    <!--label-->
    <string name="save_string">저장</string>
    <string name="label_subject_string">제목</string>
    <string name="must_input_string">필수 입력</string>
    <string name="description_string">설명</string>
    <string name="optional_input_string">선택 사항</string>
    <string name="background_string">배경색</string>
    <string name="refresh_string">refresh</string>
    <string name="change_color_string">색상 변경</string>

    <!--issue-->
    <string name="description_add_issue">add_issue</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="issue_write_time"> %s, %s님이 작성했습니다."</string>
    <string name="issue_number">#%d</string>

    <!--image description-->
    <string name="toolbar_search">toolbar_search</string>

    <!--toolbar title-->
    <string name="issue">이슈</string>
    <string name="label_add_string">새로운 레이블</string>
    <string name="label_edit_string">레이블 수정</string>
    <string name="label_string">레이블</string>
    <string name="delete_string">delete</string>
    <string name="select_items_count">선택된 항목 : %d개</string>
    <string name="select_label">레이블 선택</string>
    <string name="not_found_result">검색 결과가 없습니다.</string>
    <string name="milestone_toolbar_title_string">마일스톤</string>
    <string name="milestone_toolbar_edit_string">마일스톤 선택</string>
    <string name="milestone_toolbar_new_string">새로운 마일스톤</string>
    <string name="calendar_image_content">calendar image</string>
    <string name="add_string">add</string>

    <!-- milestone -->
    <string name="milestone_complete_date">완료일</string>
    <string name="optional_input_date_string">선택 사항(YYYY-MM-DD)</string>
    <string name="open_issue_string">열린 이슈 %d개</string>
    <string name="close_issue_string">닫힌 이슈 %d개</string>
    <string name="not_deadline_string">기한없음</string>
    <string name="milestone_add_string">새로운 마일스톤</string>
    <string name="milestone_edit_string">마일스톤 수정</string>
    <string name="clear_date_string">날짜 초기화</string>
    <string name="detail_delete">삭제하기</string>
    <string name="detail_close">닫기</string>
    <string name="detail_edit">편집하기</string>
    <string name="issue_open">열림</string>
    <string name="issue_close">닫힘</string>
    <string name="issue_open_eng">open</string>
    <string name="issue_close_eng">close</string>
    <string name="detail_menu_edit">수정하기</string>
    <string name="detail_menu_delete">삭제하기</string>

    <!-- network error message -->
    <string name="network_error">서버와 통신할 수 없습니다.</string>

    <!-- my page -->
    <string name="user_image_string">User Image</string>
    <string name="user_login_option_string">%s로 로그인하였습니다.</string>
    <string name="logout_question_positive_string">로그아웃</string>
    <string name="my_page_bottom_button_string">로그아웃</string>
    <string name="logout_question_negative_string">취소</string>
    <string name="logout_question_title_string">로그아웃</string>
    <string name="logout_question_message_string">로그아웃 하시겠습니까?</string>

    <!-- issue write -->
    <string name="preview_string">미리보기</string>
    <string name="save_issue_string">저장</string>
    <string name="edit_issue_string">수정</string>
    <string name="issue_write_subject_string">제목</string>
    <string name="new_issue_title_string">새로운 이슈</string>
    <string name="edit_issue_title_string">이슈 수정</string>
</resources>