<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.graphics.Color" />

        <variable
            name="toolbarTitle"
            type="String" />

        <variable
            name="viewModel"
            type="com.example.it.issuetracker.presentation.main.label.add.LabelAddViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.label.add.LabelAddFragment">

        <include
            android:id="@+id/label_appbarLayout"
            layout="@layout/toolbar_add_layout"
            bind:title="@{toolbarTitle}" />

        <TextView
            android:id="@+id/tv_subject"
            style="@style/Body2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/label_subject_string"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_appbarLayout" />

        <EditText
            android:id="@+id/edit_subject"
            style="@style/Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/must_input_string"
            android:text="@{viewModel.title}"
            app:layout_constraintBottom_toBottomOf="@id/tv_subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_subject"
            app:layout_constraintTop_toTopOf="@id/tv_subject" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/Body2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:text="@string/description_string"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subject" />

        <EditText
            android:id="@+id/edit_description"
            style="@style/Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/optional_input_string"
            android:text="@{viewModel.description}"
            app:layout_constraintBottom_toBottomOf="@id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_description"
            app:layout_constraintTop_toTopOf="@id/tv_description" />

        <TextView
            android:id="@+id/tv_background"
            style="@style/Body2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:text="@string/background_string"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <TextView
            android:id="@+id/edit_background"
            style="@style/Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:text="@{viewModel.backgroundColor}"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_background"
            app:layout_constraintEnd_toStartOf="@id/btn_generate_color"
            app:layout_constraintStart_toEndOf="@id/tv_background"
            app:layout_constraintTop_toTopOf="@id/tv_background"
            tools:text="#3DDCFF" />

        <ImageButton
            android:id="@+id/btn_generate_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/change_color_string"
            android:onClick="@{() -> viewModel.randomColor()}"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="@id/edit_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_background" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="22dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_background" />

        <View
            android:id="@+id/label_preview_container"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/label_container_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/label_background"
            android:backgroundTint="@{Color.parseColor(viewModel.backgroundColor)}"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@{viewModel.title}"
            android:textColor="@{Color.parseColor(viewModel.textColor)}"
            app:layout_constraintBottom_toBottomOf="@id/label_preview_container"
            app:layout_constraintEnd_toEndOf="@id/label_preview_container"
            app:layout_constraintStart_toStartOf="@id/label_preview_container"
            app:layout_constraintTop_toTopOf="@id/label_preview_container"
            tools:backgroundTint="@color/black"
            tools:text="제목"
            tools:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>